add links to take a class and teach a class

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
       </header>
       <div class ="buttonTake">
-        <a href="#">Take a Class</a>
+        <a href="takeAClass.html">Take a Class</a>
       </div>
       <div class="buttonTeach">
-        <a href="#">Teach a Class</a>
+        <a href="teachAClass.html">Teach a Class</a>
       </div>
       <div class="friends">
         <h2>Friends</h2>
