add more to teachAClass.html

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Take a Class</title>
+        <title>Search for a Class</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
