--- a/teachAClass.html
+++ b/teachAClass.html
@@ -12,4 +12,28 @@
         <h1>Teach a Class</h1>
       </div>
     </header>
+    <div class="step1">
+      <h2>1. Choose a Topic</h2>
+    </div>
+    <div class ="rectangle1"></div>
+    <div class="step2">
+      <h2>2. Invite Friends</h2>
+    </div>
+    <div class="rectangle2"></div>
+    <div class="step3">
+      <h2>3. Add Files</h2>
+    </div>
+    <div class="rectangle3"></div>
+    <div class="step4">
+      <h2>4. Choose a Template</h2>
+    </div>
+    <div class="rectangle4"></div>
+    <div class="step5">
+      <h2>5. Set Date & Time</h2>
+    </div>
+    <div class="rectangle5"></div>
+    <div class="doneButton">
+      <a href="#"><button>Done</button></a>
+    </div>
+    
 </html>
