update takeAClass and teachAClass

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Search for a Class</title>
+        <title>Take a Class</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
@@ -9,10 +9,14 @@
     </head>
     <header>
       <div class="header">
-        <h1>Take a Class</h1>
+        <h1>Search for a Class</h1>
       </div>
     </header>
     <body>
-
+      <div class="teacherRanking">
+        <p id="rank">Rank</p>
+        <p id="top">Top Teachers</p>
+        <p id="points">Points</p>
+      </div>
     </body>
 </html>
