--- a/teachAClass.html
+++ b/teachAClass.html
@@ -17,6 +17,27 @@
         <h2>1. Choose a Topic</h2>
      </div>
       <div class ="rectangle1"></div>
+      <div class="Art">
+        <button onclick="buttonClicked(this, '#555555', 'white')">Art</button>
+        <script>
+          function buttonClicked(elmnt, backClr, clr){
+            elmnt.style.backgroundColor = backClr;
+            elmnt.style.color = clr;
+          }
+        </script>
+      </div>
+      <div class="Beauty">
+        <button onClick="buttonClicked(this, '#555555', 'white')">Beauty</button>
+      </div>
+      <div class="Cooking">
+        <button onClick="buttonClicked(this, '#555555', 'white')">Cooking</button>
+      </div>
+      <div class="Fitness">
+        <button onClick="buttonClicked(this, '#555555', 'white')">Fitness</button>
+      </div>
+      <div class="Other">
+        <button onClick="buttonClicked(this, '#555555', 'white')">Other</button>
+      </div>
      <div class="step2">
         <h2>2. Invite Friends</h2>
      </div>
