--- a/takeAClass.html
+++ b/takeAClass.html
@@ -18,5 +18,21 @@
         <p id="top">Top Teachers</p>
         <p id="points">Points</p>
       </div>
+      <div class="cookingClasses">
+          <h3>Cooking</h3>
+      </div>
+        
+      <div class="artClasses">
+          <h3>Art</h3>
+      </div>
+      <div class="beautyClasses">
+          <h3>Beauty</h3>
+      </div>
+      <div class="fitnessClasses">
+          <h3>Fitness</h3>
+      </div>
+      <div class="join"></div>
+        <p id="joinFriends">Join Friends</p>
+        <p id="friendClasses">Selena Gomez</p>
     </body>
 </html>
