--- a/takeAClass.html
+++ b/takeAClass.html
@@ -13,15 +13,22 @@
       </div>
     </header>
     <body>
+      <div class="search">
+        <input type ="text" placeholder="Search...">
+      </div>
+      <div class="searchTeacher">
+        <h2>Search by Top Teachers</h2>
+      </div>
       <div class="teacherRanking">
         <p id="rank">Rank</p>
         <p id="top">Top Teachers</p>
         <p id="points">Points</p>
       </div>
+      <div class="browse">
+        <h2>Browse by Topic</h2></div>
       <div class="cookingClasses">
           <h3>Cooking</h3>
       </div>
-        
       <div class="artClasses">
           <h3>Art</h3>
       </div>
@@ -31,8 +38,9 @@
       <div class="fitnessClasses">
           <h3>Fitness</h3>
       </div>
-      <div class="join"></div>
-        <p id="joinFriends">Join Friends</p>
+      <div class="join">
+        <h2>Join Friends</h2>
+      </div>
         <p id="friendClasses">Selena Gomez</p>
     </body>
 </html>
