add file upload

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -13,6 +13,9 @@
       </div>
     </header>
     <body>
+        <div class ="backButton">
+            <a href="index.html"><button>Back</button></a>
+        </div>
       <div class="search">
         <input type ="text" placeholder="Search...">
       </div>
