--- a/teachAClass.html
+++ b/teachAClass.html
@@ -13,6 +13,9 @@
       </div>
     </header>
     <body>
+        <div class ="backButton">
+            <a href="index.html"><button>Back</button></a>
+        </div>
       <div class="step1">
         <h2>1. Choose a Topic</h2>
      </div>
@@ -45,7 +48,16 @@
     <div class="step3">
       <h2>3. Add Files</h2>
      </div>
-      <div class="rectangle3"></div>
+      <div class="rectangle3">
+            <button class="btn1">Upload a file</button>
+            <input type="file" id ="file1" name="file1">
+            <button class="btn2">Upload a file</button>
+            <input type="file" id="file2" name="file2">
+            <button class="btn3">Upload a file</button>
+            <input type="file" id="file3" name="file3">
+            <button class="btn4">Upload a file</button>
+            <input type="file" id="file4" name="file4">
+      </div>
       <div class="step4">
         <h2>4. Choose a Template</h2>
       </div>
@@ -53,7 +65,9 @@
       <div class="step5">
         <h2>5. Set Date & Time</h2>
       </div>
-      <div class="rectangle5"></div>
+      <form>
+        <input type="datetime-local" id="classtime" name="classtime">
+      </form>    
       <div class="doneButton">
         <a href="#"><button>Done</button></a>
       </div>
