start implementing fitness class page

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -40,6 +40,9 @@
       </div>
       <div class="fitnessClasses">
           <h3>Fitness</h3>
+          <div class ="chloe">
+            <a href="fitnessClass.html">Chloe Ting's Ab Workout</a>
+          </div>
       </div>
       <div class="join">
         <h2>Join Friends</h2>
