youtbe video plays automatically

--- a/fitnessClass.html
+++ b/fitnessClass.html
@@ -7,4 +7,15 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type = "text/css" href="style.css">
   </head>
+  <header>
+      <div class="header">
+        <h1>Chloe Ting's Ab Workout</h1>
+      </div>
+    </header>
+    <body>
+      <div class="video">
+        <iframe width="600" height="345" src="https://www.youtube.com/embed/2pLT-olgUJs?autoplay=1">
+        </iframe>
+      </div>
+    </body>
 </html>
