add some stock photos

--- a/fitnessClass.html
+++ b/fitnessClass.html
@@ -40,5 +40,23 @@
         <br>Calories: 160
         <br>Steps: 500
       </div>
+      <div id="img1">
+        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 1" style="width:275px;height:175px;">
+      </div>
+      <div id="stats1">
+        <h3>Stats</h3>
+        Heart Rate: 150
+        <br>Calories: 180
+        <br>Steps: 525
+      </div>
+      <div id="img2">
+        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 2" style="width:275px;height:175px;">
+      </div>
+      <div id="stats2">
+        <h3>Stats</h3>
+        Heart Rate: 160
+        <br>Calories: 200
+        <br>Steps: 515
+      </div>
     </body>
 </html>
