--- a/fitnessClass.html
+++ b/fitnessClass.html
@@ -41,7 +41,7 @@
         <br>Steps: 500
       </div>
       <div id="img1">
-        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 1" style="width:275px;height:175px;">
+        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 1" style="width:215px;height:175px;">
       </div>
       <div id="stats1">
         <h3>Stats</h3>
@@ -50,13 +50,34 @@
         <br>Steps: 525
       </div>
       <div id="img2">
-        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 2" style="width:275px;height:175px;">
+        <img src="stock-photo-asian-women-are-exercising-at-home-abdominal-exercises-sit-ups-364331810.jpg" alt="exercise photo 2" style="width:215px;height:175px;">
       </div>
       <div id="stats2">
         <h3>Stats</h3>
         Heart Rate: 160
         <br>Calories: 200
         <br>Steps: 515
+      </div>
+      <div id="img3">
+        <img src="stock-photo-young-fit-man-exercising-in-a-gym-379747825.jpg" alt="exercise photo 3" style="width:215px;height:175px;">
+      </div>
+      <div id="stats3">
+        <h3>Stats</h3>
+        Heart Rate: 130
+        <br>Calories: 240
+        <br>Steps: 565
+      </div>
+      <div id="img4">
+        <img src="stock-photo-couple-exercising-together-man-and-woman-in-sports-wear-doing-workout-at-home-1464709727.jpg" alt="exercise photo 4" style="width:215px;height:175px;">
+      </div>
+      <div id="stats4">
+        <h3>Stats</h3>
+        Heart Rate: 125
+        <br>Calories: 230
+        <br>Steps:500
+      </div>
+      <div class ="leaveButton">
+          <a href="index.html"><button>Leave Class</button></a>
       </div>
     </body>
 </html>
