mostly finished cooking class page

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -31,6 +31,9 @@
         <h2>Browse by Topic</h2></div>
       <div class="cookingClasses">
           <h3>Cooking</h3>
+          <div class="gordon">
+            <a href="cookingClass.html">Gordon Ramsey's Class</a>
+          </div>
       </div>
       <div class="artClasses">
           <h3>Art</h3>
