--- a/takeAClass.html
+++ b/takeAClass.html
@@ -42,6 +42,7 @@
           <h3>Beauty</h3>
           <div class="rihanna">
               <a href="beautyclass.html">Rihanna's Beauty Class</a>
+            </div>
       </div>
       <div class="fitnessClasses">
           <h3>Fitness</h3>
