--- a/artClass.html
+++ b/artClass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>Fitness Class</title>
+    <title>Art Class</title>
     <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
@@ -9,12 +9,12 @@
   </head>
   <header>
       <div class="header">
-        <h1>Chloe Ting's Ab Workout</h1>
+        <h1>Bob Ross' TEST Art Class</h1>
       </div>
     </header>
     <body>
       <div class="video">
-        <iframe width="600" height="345" src="https://www.youtube.com/embed/2pLT-olgUJs?autoplay=1">
+ 			<iframe width="560" height="315" src="https://www.youtube.com/embed/lLWEXRAnQd0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </iframe>
       </div>
       <div id="container">
