--- a/takeAClass.html
+++ b/takeAClass.html
@@ -37,6 +37,9 @@
       </div>
       <div class="artClasses">
           <h3>Art</h3>
+          <div class="Bob Ross">
+            <a href="artClass.html">Bob Ross' Class</a>
+          </div>
       </div>
       <div class="beautyClasses">
           <h3>Beauty</h3>
