--- a/artClass.html
+++ b/artClass.html
@@ -34,20 +34,20 @@
         });
       }
       </script>
-      <div id="cimg1">
-        <img src="30087219-male-artist-standing-by-a-painting-on-an-easel-isolated-against-white-background.jpg" alt="art photo 1" style="width:215px;height:165px;">
+      <div id="aimg1">
+        <img src="30087219-male-artist-standing-by-a-painting-on-an-easel-isolated-against-white-background.jpg" alt="art photo 1" style="width:165px;height:115px;">
       </div>
-      <div id="cimg2">
-        <img src="young-womanpaintinghouse-painter-FDT62K.jpg" alt="art photo 2" style="width:215px;height:165px;">
+      <div id="aimg2">
+        <img src="young-womanpaintinghouse-painter-FDT62K.jpg" alt="art photo 2" style="width:165px;height:115px;">
       </div>
-      <div id="cimg3">
-        <img src="stock-photo-happy-painter-is-inspired-when-painting-artist-kissed-by-the-muse-funny-man-with-brush-and-329045831.jpg" alt="art photo 3" style="width:225px;height:175px;">
+      <div id="aimg3">
+        <img src="stock-photo-happy-painter-is-inspired-when-painting-artist-kissed-by-the-muse-funny-man-with-brush-and-329045831.jpg" alt="art photo 3" style="width:165px;height:115px;">
       </div>
-      <div id="cimg4">
-        <img src="19422166-attractive-teen-girl-painter-drawing-portrait-with-oil-paints-professional-painter-at-work-over-whit.jpg" alt="cooking photo 4" style="width:225px;height:175px;">
+      <div id="aimg4">
+        <img src="19422166-attractive-teen-girl-painter-drawing-portrait-with-oil-paints-professional-painter-at-work-over-whit.jpg" alt="cooking photo 4" style="width:165px;height:115px;">
       </div>
-      <div id="cimg5">
-        <img src="craftsman-painter-stands-stairs-roller-full-portrait-over-white-background-32642150.jpg" alt="cooking photo 5" style="width:215px;height:175px;">
+      <div id="aimg5">
+        <img src="craftsman-painter-stands-stairs-roller-full-portrait-over-white-background-32642150.jpg" alt="cooking photo 5" style="width:165px;height:115px;">
       </div>
       <div id="recipe">
         <h3>Steps</h3>
