finish teach fitness page

--- a/teachFitness.html
+++ b/teachFitness.html
@@ -18,7 +18,7 @@
           </video>
       </div>
         <script>
-          var video = document.querySelector("#videoElement");
+          var video = document.querySelector("#videoElement2");
 
           if (navigator.mediaDevices.getUserMedia) {
             navigator.mediaDevices.getUserMedia({ video: true })
@@ -30,8 +30,59 @@
           });
           }
         </script>
-      <div id="stats5">
-        
+      <div id="tstats">
+        <h3>Stats</h3>
+        Heart Rate: 140
+        <br>Calories: 160
+        <br>Steps: 500
       </div>
+      <div id="fstud1">
+        <img src="stock-photo-strong-beautiful-fitness-girl-in-athletic-workout-clothes-is-doing-a-plank-exercise-while-using-a-1497529061.jpg" alt="exercise photo 1" style="width:475px;height:200px;">
+      </div>
+      <div id="tstats1">
+        <h3>Stats</h3>
+        Heart Rate: 150
+        <br>Calories: 180
+        <br>Steps: 525
+      </div>
+      <div id="fstud2">
+        <img src="stock-photo-asian-women-are-exercising-at-home-abdominal-exercises-sit-ups-364331810.jpg" alt="exercise photo 2" style="width:475px;height:200px;">
+      </div>
+      <div id="tstats2">
+        <h3>Stats</h3>
+        Heart Rate: 160
+        <br>Calories: 200
+        <br>Steps: 515
+      </div>
+      <div id="fstud3">
+        <img src="stock-photo-young-fit-man-exercising-in-a-gym-379747825.jpg" alt="exercise photo 3" style="width:475px;height:200px;">
+      </div>
+      <div id="tstats3">
+        <h3>Stats</h3>
+        Heart Rate: 130
+        <br>Calories: 240
+        <br>Steps: 565
+      </div>
+      <div id="fstud4">
+        <img src="stock-photo-couple-exercising-together-man-and-woman-in-sports-wear-doing-workout-at-home-1464709727.jpg" alt="exercise photo 4" style="width:475px;height:200px;">
+      </div>
+      <div id="tstats4">
+        <h3>Stats</h3>
+        Heart Rate: 125
+        <br>Calories: 230
+        <br>Steps:500
+      </div>
+      <div id="fstud5">
+        <img src="stock-photo-strong-athletic-fit-man-in-t-shirt-and-shorts-is-doing-forward-lunge-exercises-at-home-in-his-1497529346.jpg" alt="exercise photo 5" style="width:475px;height:200px;">
+      </div>
+      <div id="tstats5">
+        <h3>Stats</h3>
+        Heart Rate: 130
+        <br>Calories: 240
+        <br>Steps: 565
+      </div>
+      <div class ="endButton">
+        <a href="index.html"><button>End Class</button></a>
+    </div>
   </body>
 </html>
