add basic cooking info page, no css yet

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -32,7 +32,7 @@
       <div class="cookingClasses">
           <h3>Cooking</h3>
           <div class="gordon">
-            <a href="cookingClass.html">Gordon Ramsey's Class</a>
+            <a href="cookingInfo.html">Gordon Ramsey's Class</a>
           </div>
       </div>
       <div class="artClasses">
