add css to the cooking info page

--- a/cookingInfo.html
+++ b/cookingInfo.html
@@ -23,7 +23,7 @@
       This class is about to start. Join Class?
     </div>
     <div class ="joinButton">
-        <a href="cookingClass.html"><button>JoinClass</button></a>
+        <a href="cookingClass.html"><button>Join Class</button></a>
     </div>
     <div id="cIngredients">
       <h3>Ingredients</h3>
@@ -35,6 +35,10 @@
       Oven
       <br>Stove
       <br>2 Pans
+    </div>
+    <div  id="cDescription">
+       <h3>Description</h3>
+       Gordon Ramsey teaches you how to make stir fry.
     </div>
   </body>
   </html>
