start other info pages

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -38,19 +38,19 @@
       <div class="artClasses">
           <h3>Art</h3>
           <div class="Bob Ross">
-            <a href="artClass.html">Bob Ross' Class</a>
+            <a href="artInfo.html">Bob Ross' Class</a>
           </div>
       </div>
       <div class="beautyClasses">
           <h3>Beauty</h3>
           <div class="rihanna">
-              <a href="beautyclass.html">Rihanna's Beauty Class</a>
+              <a href="beautyInfo.html">Rihanna's Beauty Class</a>
             </div>
       </div>
       <div class="fitnessClasses">
           <h3>Fitness</h3>
           <div class ="chloe">
-            <a href="fitnessClass.html">Chloe Ting's Ab Workout</a>
+            <a href="fitnessInfo.html">Chloe Ting's Ab Workout</a>
           </div>
       </div>
       <div class="join">
