fully implemented info pages before each class

--- a/artInfo.html
+++ b/artInfo.html
@@ -20,7 +20,20 @@
           This class is about to start. Join Class?
         </div>
         <div class ="joinButton">
-            <a href="cookingClass.html"><button>Join Class</button></a>
-        </div>
+            <a href="artclass.html"><button>Join Class</button></a>
+      </div>
+      <div id="ctime">
+          <h3>Class Time</h3> Today from 5:30pm-7:30pm
+      </div>
+      <div id="cDescription">
+          <h3>Description</h3>
+          Bob Ross teaches you how to paint a beautiful landscape.
+      </div>
+      <div id="fMaterials">
+        <h3>Materials</h3>
+         Canvas
+         <br>Paint Brush
+         <br>Red, green, blue, white paint
+      </div>
   </body>
 </html>
