--- a/beautyInfo.html
+++ b/beautyInfo.html
@@ -20,7 +20,22 @@
           This class is about to start. Join Class?
         </div>
         <div class ="joinButton">
-            <a href="cookingClass.html"><button>Join Class</button></a>
-        </div>
+            <a href="beautyClass.html"><button>Join Class</button></a>
+       </div>
+      <div id="ctime">
+          <h3>Class Time</h3> Today from 2:30pm-3:30pm
+      </div>
+      <div id="cDescription">
+        <h3>Description</h3>
+        Rihanna teaches you how to do her favorite makeup look.
+      </div>
+      <div id="fMaterials">
+        <h3>Materials</h3>
+        Foundation
+        <br>Blush
+        <br>Concealer
+        <br>Eyeshadow Palette
+        <br>Foundation Brush
+      </div>
   </body>
 </html>
