--- a/fitnessInfo.html
+++ b/fitnessInfo.html
@@ -13,14 +13,26 @@
     </div>
   </header>
   <body>
-      <div class ="backButton1">
-          <a href="takeAClass.html"><button>Back</button></a>
+     <div class ="backButton1">
+        <a href="takeAClass.html"><button>Back</button></a>
       </div>
       <div class="current">
-          This class is about to start. Join Class?
-        </div>
-        <div class ="joinButton">
-            <a href="cookingClass.html"><button>Join Class</button></a>
-        </div>
+         This class is about to start. Join Class?
+      </div>
+      <div class ="joinButton">
+         <a href="fitnessClass.html"><button>Join Class</button></a>
+      </div>
+      <div id="ctime">
+          <h3>Class Time</h3> Today from 8:30am-9:30am
+      </div>
+      <div id="cDescription">
+          <h3>Description</h3>
+          Chloe Ting leads you through an intense ab workout.
+      </div>
+      <div id="fMaterials">
+        <h3>Materials</h3>
+        Yoga Mat
+      </div>
+
   </body>
 </html>
