--- a/teachAClass.html
+++ b/teachAClass.html
@@ -37,28 +37,33 @@
         <button onClick="buttonClicked(this, '#555555', 'white')">Other</button>
       </div>
      <div class="step2">
-        <h2>2. Invite Friends</h2>
+        <h2>2. Write a Description</h2>
      </div>
-     <div class="rectangle2"></div>
-    <div class="step3">
-      <h2>3. Add Files</h2>
+    <input type="text" id="textdes" name="des" placeholder="type class description here...">
+     <div class="step3">
+       <h2>3. Materials Needed</h2>
+     </div>
+     <input type="text" id="textmat" name="mat" placeholder="type any materials needed here...">
+     <div class="rectangle2a"></div>
+    <div class="step4">
+      <h2>4. Add Files</h2>
      </div>
       <div class="rectangle3">
             <button class="btn1">Upload a file</button>
             <input type="file" id ="file1" name="file1">
             <button class="btn2">Upload a file</button>
             <input type="file" id="file2" name="file2">
-            <button class="btn3">Upload a file</button>
-            <input type="file" id="file3" name="file3">
-            <button class="btn4">Upload a file</button>
-            <input type="file" id="file4" name="file4">
       </div>
-      <div class="step4">
-        <h2>4. Choose a Template</h2>
+      <div class="step6">
+        <h2>6. Choose a Template</h2>
       </div>
       <div class="rectangle4"></div>
       <div class="step5">
-        <h2>5. Set Date & Time</h2>
+        <h2>5.Invite Friends</h2>
+      </div>
+      <div class="rectangle5"></div>
+      <div class="step7">
+          <h2>7. Set Date & Time</h2>
       </div>
       <div id="doneButton"></div>
       <form>
