--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Friends</h2>
       </div>
       <div class="classes">
-        <h2>Classes You've Signed Up For</h2>
+        <h2>Your Schedule</h2>
       </div>
       <div class="monday">
         <h3>Monday</h3>
