update and rename beautyClass

--- a/beautyClass.html
+++ b/beautyClass.html
@@ -65,8 +65,17 @@
       </div>
       <div id="stats4">
         <h3>Palette</h3>
-     
+
+    
       </div>
+      <div class ="greenRectangle"></div>
+      <div class ="blueRectangle"></div>
+      <div class ="brownRectangle"></div>
+      <div class ="greyRectangle"></div>
+      <span class="circle1"></span>
+      <span class="circle2"></span>
+      <span class="circle3"></span>
+      <span class="circle4"></span>
       <div class ="leaveButton">
           <a href="index.html"><button>Leave Class</button></a>
       </div>
