add sign up for future class

--- a/takeAClass.html
+++ b/takeAClass.html
@@ -46,6 +46,9 @@
           <div class="rihanna">
               <a href="beautyInfo.html">Rihanna's Beauty Class</a>
             </div>
+          <div class="james">
+            <a href="signUp.html">James Charles' Makeup Class</a>
+          </div>
       </div>
       <div class="fitnessClasses">
           <h3>Fitness</h3>
