--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <div class="tuesday">
         <h3>Tuesday</h3>
+        4:30pm-5:30pm James Charles' Makeup Class
       </div>
       <div class="wednesday">
         <h3>Wednesday</h3>
