add registration pages when teaching Fitness or Other class

--- a/signUpConfirmation.html
+++ b/signUpConfirmation.html
@@ -28,7 +28,7 @@
         <h3>Description</h3>
         James Charles teaches you how to perfect his favorite makeup look.
       </div>
-      <div id="conffMaterials">
+      <div id="confMaterials">
         <h3>Materials</h3>
         Foundation
         <br>Blush
