--- a/teachAClass.html
+++ b/teachAClass.html
@@ -103,14 +103,14 @@
                 document.getElementById("Beauty").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Beauty</button>';
                 document.getElementById("Cooking").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Cooking</button>';
                 document.getElementById("Other").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Other</button>';
-                type="teachFitness.html";
+                type="fitnessRegistration.html";
                 console.log(type);
               }else{
                 document.getElementById("Art").innerHTML='<button onclick="buttonClicked(this, \'#555555\', \'white\')">Art</button>';
                 document.getElementById("Beauty").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Beauty</button>';
                 document.getElementById("Cooking").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Cooking</button>';
                 document.getElementById("Fitness").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Fitness</button>';
-                type="teachFitness.html";
+                type="otherRegistration.html";
               }
             } else{
               elmnt.style.backgroundColor = '#C4C4C4';
