--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       </div>
       <div class="friday">
         <h3>Friday</h3>
+        <p style="color:darkblue">6:30pm-8:30pm Your Class</p>
+        
       </div>
     </body>
 
