fix spelling error

--- a/teachBeauty.html
+++ b/teachBeauty.html
@@ -34,7 +34,7 @@
         <img src="BeautyTeach1.jpeg" style="width:250px;height:200px;">
       </div>
       <div id="tcimg2">
-        <img src="BeatuyTeach3.jpeg" style="width:250px;height:200px;">
+        <img src="BeautyTeach2.jpeg" style="width:250px;height:200px;">
       </div>
       <div id="tcimg3">
         <img src="BeautyTeach3.jpeg" alt="cooking photo 3" style="width:250px;height:200px;">
