finish registration pages for all classes after teach a class page

--- a/cookingRegistration.html
+++ b/cookingRegistration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-      <title>Fitness Class Registration</title>
+      <title>Cooking Class Registration</title>
       <meta name="description" content="">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta charset="utf-8">
@@ -9,7 +9,7 @@
   </head>
   <header>
     <div class="header">
-      <h1>Your Fitness Class Info</h1>
+      <h1>Your Cooking Class Info</h1>
     </div>
   </header>
   <body>
@@ -17,22 +17,29 @@
         <a href="teachAClass.html"><button>Back</button></a>
       </div>
       <div class="current">
-        You have successfully registered to teach a Fitness Class. 
+        You have successfully registered to teach a Cooking Class. 
         This class is about to start. Start Class?
       </div>
       <div class ="joinButton">
-         <a href="teachFitness.html"><button>Start Class</button></a>
+         <a href="teachCooking.html"><button>Start Class</button></a>
       </div>
       <div id="ctime">
-          <h3>Class Time</h3> Today from 8:30am-9:30am
+          <h3>Class Time</h3> Today from 5:30pm-6:30pm
       </div>
       <div id="cDescription">
           <h3>Description</h3>
-          Gemma Standley leads you through an intense ab workout.
+          Tristan Senkowski teaches you how to make the perfect pizza.
       </div>
-      <div id="fMaterials">
+      <div id="cIngredients">
+        <h3>Ingredients</h3>
+        Dough
+        <br>3 cups Tomato sauce
+        <br>1 cup cheese
+      </div>
+      <div id="cMaterials">
         <h3>Materials</h3>
-        Yoga Mat
+        Oven
+        <br>Pizza stone
       </div>
 
   </body>
