--- a/teachAClass.html
+++ b/teachAClass.html
@@ -82,21 +82,21 @@
                 document.getElementById("Cooking").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Cooking</button>';
                 document.getElementById("Fitness").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Fitness</button>';
                 document.getElementById("Other").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Other</button>';
-                type="teachArt.html";
+                type="artRegistration.html";
                 console.log(type);
               }else if(elmnt.outerHTML == '<button onclick="buttonClicked(this, \'#555555\', \'white\')" style="background-color: rgb(85, 85, 85); color: white;">Beauty</button>'){
                 document.getElementById("Art").innerHTML='<button onclick="buttonClicked(this, \'#555555\', \'white\')">Art</button>';
                 document.getElementById("Cooking").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Cooking</button>';
                 document.getElementById("Fitness").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Fitness</button>';
                 document.getElementById("Other").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Other</button>';
-                type="teachBeauty.html";
+                type="beautyRegistration.html";
                 console.log(type);
               }else if(elmnt.outerHTML == '<button onclick="buttonClicked(this, \'#555555\', \'white\')" style="background-color: rgb(85, 85, 85); color: white;">Cooking</button>'){
                 document.getElementById("Art").innerHTML='<button onclick="buttonClicked(this, \'#555555\', \'white\')">Art</button>';
                 document.getElementById("Beauty").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Beauty</button>';
                 document.getElementById("Fitness").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Fitness</button>';
                 document.getElementById("Other").innerHTML='<button onClick="buttonClicked(this, \'#555555\', \'white\')">Other</button>';
-                type="teachCooking.html";
+                type="cookingRegistration.html";
                 console.log(type);
               }else if(elmnt.outerHTML == '<button onclick="buttonClicked(this, \'#555555\', \'white\')" style="background-color: rgb(85, 85, 85); color: white;">Fitness</button>'){
                 document.getElementById("Art").innerHTML='<button onclick="buttonClicked(this, \'#555555\', \'white\')">Art</button>';
