--- a/beautyRegistration.html
+++ b/beautyRegistration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-      <title>Fitness Class Registration</title>
+      <title>Beauty Class Registration</title>
       <meta name="description" content="">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta charset="utf-8">
@@ -9,7 +9,7 @@
   </head>
   <header>
     <div class="header">
-      <h1>Your Fitness Class Info</h1>
+      <h1>Your Beauty Class Info</h1>
     </div>
   </header>
   <body>
@@ -17,18 +17,18 @@
         <a href="teachAClass.html"><button>Back</button></a>
       </div>
       <div class="current">
-        You have successfully registered to teach a Fitness Class. 
+        You have successfully registered to teach a Beauty Class. 
         This class is about to start. Start Class?
       </div>
       <div class ="joinButton">
-         <a href="teachFitness.html"><button>Start Class</button></a>
+         <a href="teachBeauty.html"><button>Start Class</button></a>
       </div>
       <div id="ctime">
-          <h3>Class Time</h3> Today from 8:30am-9:30am
+          <h3>Class Time</h3> Today from 7:00pm-8:30pm
       </div>
       <div id="cDescription">
           <h3>Description</h3>
-          Gemma Standley leads you through an intense ab workout.
+          Nathan Genstein teaches you how to recreate his favorite hair style.
       </div>
       <div id="fMaterials">
         <h3>Materials</h3>
