--- a/review_teacher.html
+++ b/review_teacher.html
@@ -39,6 +39,10 @@
       text-align: left; 
       user-select: none; 
       font-size: 3em;
+      position: absolute;
+      left:840px;
+      top:190px;
+
       font-size: calc(var(--star-size) * 1em);
       cursor: pointer;
       -webkit-tap-highlight-color: rgba(0,0,0,0);
