added teacher review pages for the students, and student review pages for the teachers. updated the css file respectively, updated all pages to link properly, updated teacher pages so they say, end class, instead of leave class.

--- a/cookingClass.html
+++ b/cookingClass.html
@@ -55,7 +55,7 @@
         <br>2. Preheat the oven to 350F
       </div>
      <div class ="leaveButton">
-        <a href="index.html"><button>Leave Class</button></a>
+        <a href="review_teacher.html"><button>Leave Class</button></a>
     </div>
   </body>
 </html>
