--- a/review_teacher.html
+++ b/review_teacher.html
@@ -22,11 +22,10 @@
       <div id="reviewbox">
           <h3>Feedback for Instructor</h3> Today from 4:3pm-5:30am
       </div>
-      <div id="cDescription">
-          <h3>Description</h3>
-          Nathan Genstein teaches you how to paint a beautiful landscape.
+      <div id="starrating">
+          <h3>Rate your Instructor</h3>
       </div>
-      
+    <input type="text" id="review_feedback" name="des" placeholder="Type feedback here.">
 <html ⚡>
 <head> 
   <!-- this following code is in reference to code found at the following URL. https://playground.amp.dev/?url=https%3A%2F%2Fpreview.amp.dev%2Fdocumentation%2Fexamples%2Finteractivity-dynamic-content%2Fstar_rating&format=websites&mode=Galaxy+S5 all credit is given to them and we do not claim this code as our own. -->
@@ -40,8 +39,8 @@
       user-select: none; 
       font-size: 3em;
       position: absolute;
-      left:840px;
-      top:190px;
+      left:825px;
+      top:335px;
 
       font-size: calc(var(--star-size) * 1em);
       cursor: pointer;
