--- a/teachCooking.html
+++ b/teachCooking.html
@@ -73,7 +73,7 @@
         <br>3. Finely dice onions.
       </div>
      <div class ="leaveButton">
-        <a href="index.html"><button>Leave Class</button></a>
+        <a href="review_student.html"><button>End Class</button></a>
     </div>
   </body>
 </html>
