--- a/artClass.html
+++ b/artClass.html
@@ -55,7 +55,7 @@
         <br>2. Fade in the sky
       </div>
      <div class ="leaveButton">
-        <a href="index.html"><button>Leave Class</button></a>
+        <a href="review_teacher.html"><button>Leave Class</button></a>
     </div>
   </body>
 </html>
