--- a/beautyClass.html
+++ b/beautyClass.html
@@ -77,7 +77,7 @@
       <span class="circle3"></span>
       <span class="circle4"></span>
       <div class ="leaveButton">
-          <a href="index.html"><button>Leave Class</button></a>
+          <a href="review_teacher.html"><button>Leave Class</button></a>
       </div>
     </body>
 </html>
