--- a/fitnessClass.html
+++ b/fitnessClass.html
@@ -77,7 +77,7 @@
         <br>Steps:500
       </div>
       <div class ="leaveButton">
-          <a href="index.html"><button>Leave Class</button></a>
+          <a href="review_teacher.html"><button>Leave Class</button></a>
       </div>
     </body>
 </html>
