--- a/teachBeauty.html
+++ b/teachBeauty.html
@@ -73,7 +73,7 @@
       <div class ="fourthRectangle"></div>
       <div class ="fifthRectangle"></div>
      <div class ="leaveButton">
-        <a href="index.html"><button>Leave Class</button></a>
+        <a href="review_student.html"><button>End Class</button></a>
     </div>
   </body>
 </html>
