--- a/teachFitness.html
+++ b/teachFitness.html
@@ -82,7 +82,7 @@
         <br>Steps: 565
       </div>
       <div class ="endButton">
-        <a href="index.html"><button>End Class</button></a>
+        <a href="review_student.html"><button>End Class</button></a>
     </div>
   </body>
 </html>
