--- a/teachAClass.html
+++ b/teachAClass.html
@@ -71,7 +71,7 @@
       <h2>7. Name your class</h2>
      </div>
     <div class="maxNumber"></div>
-    <input type="Number" id="textNumber" name="Number" placeholder="Max Number" autocomplete="off">
+    <input type="Number" id="numberNumber" name="Number" placeholder="Max Number" autocomplete="off">
     <div class="step8">
       <h2>8. Max # of students<h2>
       </div>
