changed submit button to go to index.html

--- a/review_teacher.html
+++ b/review_teacher.html
@@ -17,7 +17,7 @@
         Please leave some feedback for your instructor.
       </div>
       <div class ="submitButton">
-         <a href="takeAClass.html"><button>Submit Feedback</button></a>
+         <a href="index.html"><button>Submit Feedback</button></a>
       </div>
       <div id="reviewbox">
           <h3>Feedback for Instructor</h3> Today from 4:3pm-5:30am
