--- a/review_student.html
+++ b/review_student.html
@@ -17,7 +17,7 @@
         Please leave some feedback for your students.
       </div>
       <div class ="submitButton">
-         <a href="teachAClass.html"><button>Submit Feedback</button></a>
+         <a href="index.html"><button>Submit Feedback</button></a>
       </div>
       <div id="reviewbox">
           <h3>Feedback for Students</h3>
